<resources>
    <string name="app_name">UTA Community</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="phone">Phone</string>
    <string name="register">Register New User</string>
    <string name="first_name">First Name</string>
    <string name="middle_name_opt">Middle Name (opt)</string>
    <string name="email">Email</string>
    <string name="full_address">Full Address</string>
    <string name="summary">Summary</string>
    <string name="user">Username</string>
    <string name="major">Major</string>
    <string name="last_name">Last Name</string>
    <string name="submit">Submit</string>
    <string name="pass">Password</string>
    <string name="back">Back</string>
    <string name="uta_community">UTA Community</string>
    <string name="connect_socially">Connect Socially</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_new_user">Register New User</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="net_id">Net id</string>
    <string name="full_name">full name</string>
    <string name="welcom_to_uta">Welcom to UTA</string>
    <string name="sign_out">Sign out</string>
</resources>